--- a/language/overrides/fa-IR.override.ini
+++ b/language/overrides/fa-IR.override.ini
@@ -1,3 +1,6 @@
+NETPARSI="نت‌پارسی"
+DESIGNEDBY="طراحی شده توسط %s"
+COPYRIGHT="تمامی حقوق این وب سایت متعلق است به %s."
 PARTOANDISHEH="پرتو اندیشه"
 CINSULTINGCENTER="مرکز مشاوره"
 BOOKAPPOINTMENT="رزرو نوبت مشاوره"
