--- a/administrator/language/overrides/en-GB.override.ini
+++ b/administrator/language/overrides/en-GB.override.ini
@@ -1,3 +1,5 @@
+COM_RSFORM_APPOINTMENT_FORM="PA - Appointment Form"
+COM_RSFORM_CONTACT_FORM="PA - Contact Form"
 TPL_PA_BGIMAGE="Background Image"
 TPL_PA_IMAGE="Image"
 TPL_PA_TEXTCOLOR="Text Color"
