--- a/language/overrides/fa-IR.override.ini
+++ b/language/overrides/fa-IR.override.ini
@@ -1,3 +1,4 @@
+COM_CONTENT_ARTICLE_HITS="%s بازدید"
 NETPARSI="نت‌پارسی"
 DESIGNEDBY="طراحی شده توسط %s"
 COPYRIGHT="تمامی حقوق این وب سایت متعلق است به %s."
