--- a/administrator/language/fa-IR/fa-IR.com_config.ini
+++ b/administrator/language/fa-IR/fa-IR.com_config.ini
@@ -81,6 +81,8 @@ COM_CONFIG_FIELD_FILTERS_CUSTOM_BLACK_LIST="لیست سیاه سفارشی"
 COM_CONFIG_FIELD_FILTERS_NO_HTML="بدون HTML"
 COM_CONFIG_FIELD_FILTERS_NO_FILTER="بدون فیلتر"
 COM_CONFIG_FIELD_FILTERS_WHITE_LIST="لیست سفید(مجاز)"
+COM_CONFIG_FIELD_FLOC_BLOCKER_DESC="برای عدم پشتیبانی از ردیابی از طریق روش FLoC ،یک سر صفحه ارسال کنید."
+COM_CONFIG_FIELD_FLOC_BLOCKER_LABEL="FLoC را مسدود کنید"
 COM_CONFIG_FRONTEDITING_DESC="اگر می خواهید ویرایش های درون خطی برای ماژول ها و آیتم های منویی را انتخاب کنید (پشتیبانی ممکن است به قالب شما بستگی داشته باشد) انتخاب کنید."
 COM_CONFIG_FRONTEDITING_LABEL="در حال ویرایش درون خطی"
 COM_CONFIG_FRONTEDITING_MENUSANDMODULES="ماژول ها و منوها"
