--- a/language/overrides/fa-IR.override.ini
+++ b/language/overrides/fa-IR.override.ini
@@ -1,3 +1,7 @@
+SHOWONMAP="موقعیت ما روی نقشه"
+PATHFINDER="مسیریابی"
+SOCIALMEDIA="شبکه های اجتماعی"
+CONTACTINFO="اطلاعات تماس"
 COM_CONTENT_ARTICLE_HITS="%s بازدید"
 NETPARSI="نت‌پارسی"
 DESIGNEDBY="طراحی شده توسط %s"
