--- a/language/overrides/fa-IR.override.ini
+++ b/language/overrides/fa-IR.override.ini
@@ -1,3 +1,7 @@
+OTHERBLOGITEMS="مطالب دیگر بلاگ"
+SHARETHIS="به اشتراک بگذارید :"
+BACKTO="بازگشت به"
+COM_CONTENT_PUBLISHED_DATE_ON="%s"
 SHOWONMAP="موقعیت ما روی نقشه"
 PATHFINDER="مسیریابی"
 SOCIALMEDIA="شبکه های اجتماعی"
