--- a/administrator/language/overrides/en-GB.override.ini
+++ b/administrator/language/overrides/en-GB.override.ini
@@ -1,3 +1,5 @@
+COM_CONTENT_MORE_DETAILS="اطلاعات بیشتر"
+COM_CONTENT_CATEGORY_VIEW_SERVICES_TITLE="PA - Services"
 COM_CONTENT_CATEGORY_VIEW_PSYCHOLOGISTS_TITLE="PA - Psychologists"
 COM_CONTENT_CATEGORY_VIEW_WEBBLOG_TITLE="PA - Weblog"
 COM_RSFORM_APPOINTMENT_FORM="PA - Appointment Form"
