--- a/language/overrides/fa-IR.override.ini
+++ b/language/overrides/fa-IR.override.ini
@@ -1,3 +1,4 @@
+COM_CONTENT_MORE_DETAILS="اطلاعات بیشتر"
 AVAILABILITYTIMES="ساعات کاری"
 BOOKTHISPSY="درخواست مشاوره با این روانشناس"
 OTHERBLOGITEMS="مطالب دیگر بلاگ"
