--- a/administrator/language/overrides/en-GB.override.ini
+++ b/administrator/language/overrides/en-GB.override.ini
@@ -1,3 +1,5 @@
+TPL_PA_TEXT="Text"
+TPL_PA_ITEMS="Items"
 COM_CONTENT_ARTICLE_VIEW_SERVICE_TITLE="PA - Service"
 COM_CONTENT_ARTICLE_VIEW_ABOUT_TITLE="PA - About us"
 COM_CONTENT_MORE_DETAILS="اطلاعات بیشتر"
