--- a/administrator/language/en-GB/en-GB.com_rsform.ini
+++ b/administrator/language/en-GB/en-GB.com_rsform.ini
@@ -224,7 +224,9 @@ RSFP_COMP_FIELD_ACCEPTEDFILESIMAGES_DESC="Set this to Yes if you would like to o
 RSFP_COMP_FIELD_THUMBSIZE="Thumb Width (Pixels)"
 RSFP_COMP_FIELD_THUMBSIZE_DESC="Specify the width of the thumbnail, in pixels. Use 0 if you do not want to create a thumb, keeping the original image instead."
 RSFP_COMP_FIELD_THUMBQUALITY="Thumb Quality (Percent)"
-RSFP_COMP_FIELD_THUMBQUALITY_DESC="Specify the quality of the resulting JPEG thumbnail."
+RSFP_COMP_FIELD_THUMBQUALITY_DESC="Specify the quality of the resulting thumbnail."
+RSFP_COMP_FIELD_THUMBEXTENSION="Thumb Extension"
+RSFP_COMP_FIELD_THUMBEXTENSION_DESC="Select the extension of the resulting thumbnail."
 RSFP_COMP_FIELD_DESTINATION="Destination"
 RSFP_COMP_FIELD_DESTINATION_DESC="Configure the path where uploaded files will be stored. The default value should suffice but feel free to type in another path."
 RSFP_COMP_FIELD_SANITIZEFILENAME="Sanitize Filename"
@@ -518,9 +520,9 @@ RSFP_HTML5LAYOUTS="Responsive Layouts"
 RSFP_LAYOUT_BOOTSTRAP2="Bootstrap 2.3.2"
 RSFP_LAYOUT_BOOTSTRAP3="Bootstrap 3.4.1"
 RSFP_LAYOUT_BOOTSTRAP4="Bootstrap 4.6.0"
-RSFP_LAYOUT_BOOTSTRAP5="Bootstrap 5.0.1"
+RSFP_LAYOUT_BOOTSTRAP5="Bootstrap 5.0.2"
 RSFP_LAYOUT_UIKIT="uikit 2.27.5"
-RSFP_LAYOUT_UIKIT3="UIkit 3.6.21"
+RSFP_LAYOUT_UIKIT3="UIkit 3.7.0"
 RSFP_LAYOUT_FOUNDATION="Zurb Foundation 6.6.3"
 RSFP_LOAD_LAYOUT_FRAMEWORK="Load Layout CSS / JS"
 RSFP_FORM_LAYOUT_FLOW="Layout Flow"
