--- a/language/overrides/fa-IR.override.ini
+++ b/language/overrides/fa-IR.override.ini
@@ -1,3 +1,4 @@
+QUICKREQUEST="ارسال سریع درخواست مشاوره"
 PARTOBLOG="بلاگ پرتو اندیشه"
 RSFP_THANKYOU_SMALL="درخواست شما با موفقیت ارسال شد. کارشناسان ما بزودی با شما تماس حاصل خواهند نمود."
 WHOWEARE="ما که هستیم ؟"
