--- a/language/overrides/en-GB.override.ini
+++ b/language/overrides/en-GB.override.ini
@@ -1,6 +1,6 @@
 QUICKREQUEST="Quick Booking Request"
 PARTOBLOG="Parto Andisheh Blog"
-RSFP_THANKYOU_SMALL="درخواست شما با موفقیت ارسال شد. کارشناسان ما بزودی با شما تماس حاصل خواهند نمود."
+RSFP_THANKYOU_SMALL="Your request has been successfully received. We'll call you back shortly."
 WHOWEARE="Who We Are ?"
 COM_CONTENT_MORE_DETAILS="More Details"
 AVAILABILITYTIMES="Working Hours"
@@ -10,7 +10,7 @@ SHARETHIS="Share This:"
 BACKTO="Back to"
 COM_CONTENT_PUBLISHED_DATE_ON="%s"
 SHOWONMAP="Show on Map"
-PATHFINDER="مسیریابی"
+PATHFINDER="Find The Best Route"
 SOCIALMEDIA="Social Networks"
 CONTACTINFO="Contact Info."
 COM_CONTENT_ARTICLE_HITS="%s Hits"
